Fix of z-index and multiple popup handling

--- a/src/scss/modules/_artistes.scss
+++ b/src/scss/modules/_artistes.scss
@@ -8,7 +8,6 @@
 
 .artiste {
   position: relative;
-  z-index: 3;
 }
 
 .artistes-img-cont {
@@ -27,6 +26,7 @@
     &:nth-child(2) {
       z-index: -1;
       opacity: 0.5;
+      transform: translateY(-30%);
     }
   }
 }
@@ -62,6 +62,7 @@
   align-items: baseline;
   padding: 0 1vw;
   position: relative;
+  z-index: 1;
 
   &::before {
     content: "";
@@ -146,7 +147,7 @@
   right: 4vw;
   opacity: 0.6;
   bottom: 4vh;
-  z-index: -1;
+  // z-index: -1;
 }
 
 .artiste-popup-links-cont {
